Changelog
=========

1.0a2 (unreleased)
------------------

- Nothing changed yet.


1.0a1 (2012-08-22)
------------------

- Initial release