@@ -1,0 +1,18 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      i18n:domain="ftw.solr">
+
+<head>
+    <style>
+        a.term {font-family: "Helvetica"}
+    </style>
+</head>
+
+<body>
+    <div tal:content="structure view/fragment_template" />
+</body>
+
+</html>
