@@ -4,7 +4,8 @@ Changelog
 1.0a2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added basic Word Cloud browser view.
+  [lgraf]
 
 
 1.0a1 (2012-08-22)
